--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,15 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+  current_time_job:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Now it is
+        run: |
+          echo date
+  ls_job:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Directory content
+        run: |
+          echo ls -l
