--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint -- --fix
+      - name: test
+        run: npm test
+      - name: build
+        run: npm  run build
