--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "cypress:open": "cypress open",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "cypress:open": "cypress open"
 
   },
   "repository": {
