--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "start:test": "test:e2e"
+    "test:e2e": "./node_modules/.bin/cypress run"
 
   },
   "repository": {
